--- a/style.css
+++ b/style.css
@@ -156,6 +156,67 @@ dt {
     text-align: justify;
     display: flex;
  }
+ /* 1st brand */
+ .brand-name1 {
+    padding: 10px 20px;
+    width: 290px;
+    height: 300px;
+    font-family: 'Play', sans-serif;
+    /* border: 2px solid maroon; */
+}
+.brand-name1 h4:hover{
+    text-decoration: underline;
+    color:brown;
+    font-size:25px;
+
+}
+
+.brand-desc1 {
+    padding: 10px 20px;
+    width: 290px;
+    height: 300px;
+    font-family: 'Play', sans-serif;
+    /* border: 2px solid lime; */
+}
+.brand-desc1 h4:hover{
+    text-decoration: underline;
+    color:brown;
+    font-size:25px;
+
+}
+
+
+ /* 1st brand end */
+ /* 2nd brand start */
+ .brand-name2 {
+    padding: 10px 20px;
+    width: 290px;
+    height: 300px;
+    font-family: 'Play', sans-serif;
+    /* border: 2px solid maroon; */
+}
+.brand-name2 h4:hover{
+    text-decoration: underline;
+    color:brown;
+    font-size:25px;
+
+}
+
+.brand-desc2 {
+    padding: 10px 20px;
+    width: 290px;
+    height: 300px;
+    font-family: 'Play', sans-serif;
+    /* border: 2px solid lime; */
+}
+.brand-desc2 h4:hover{
+    text-decoration: underline;
+    color:brown;
+    font-size:25px;
+
+}
+
+ /* 2nd brabd end */
 
 .brand-name {
     padding: 10px 20px;
@@ -184,7 +245,6 @@ dt {
     font-size:25px;
 
 }
-
 img {
     width: 100%;
     height: 100%;
@@ -263,4 +323,147 @@ input{
     margin: 20px;;
     font-size:40px;
     color:rgb(103, 101, 101)
+}
+
+/************************************* phone *********************************/
+@media only screen and (max-width:400px){
+/* haeder */
+header {
+    height: 230px;
+    padding-top: 45px;
+    border-radius: 50%;
+}
+/* box */
+.main-sub1 {
+    width: 319px;
+    height: 464px;
+    margin-left: 6px;
+}
+p{
+    font-size: 18px;
+}
+.sticky-logo{
+    margin-left: 325px;
+    top:150px;
+   }
+/* types */
+/* coffee-types-heading */
+a {
+        font-size: 15px;
+}
+a:hover {
+    font-size: 17px;
+}
+.types, dt,
+dl {
+        font-size: 14px;
+    }
+/* Brands */
+.brands {
+    width: 365px;
+    height: 525px;
+    /* border: 2px solid green; */
+    /* border-radius:20px; */
+    margin-left: 3px;
+    margin-top: 0px;
+    flex-wrap: wrap;
+    flex-direction: row;
+ }
+
+/* 1st, 3rd, 5th brand */
+ .brand-name1 {
+    padding: 10px 10px;
+       width: 290px;
+    height: 250px;
+    /* border: 2px solid maroon; */
+}
+.brand-desc1 {
+    padding: 0px 20px;
+    width: 350px;
+    height: 190px;
+    /* border:2px solid blue; */
+}
+/* 2nd, 4th brand */
+.brand-name2 {
+    padding: 0px 20px;
+    width: 350px;
+    height: 220px;
+    /* border: 2px solid maroon; */
+}
+.brand-desc2 {
+    padding: 10px 10px;
+    width: 290px;
+    height: 250px;
+    /* border: 2px solid lime; */
+}
+/* Gallery */
+
+.rows{
+    flex-wrap: wrap;
+    flex-direction: row;
+    margin:0px; 
+    padding:0px;
+}
+.picture{
+    margin:20px;
+    padding:10px;
+    width:400px;
+    height:300px; 
+     /* border:2px solid green */
+}
+h4{
+    font-size: 18px;
+}
+/* form */
+
+.form{
+    /* border:2px solid blue; */
+    text-align:start;
+    font-size: 16px;
+    }
+h3{
+        font-size: 20px;
+  }
+input{
+    width:290px;
+    font-size: 16px;
+    padding:15px
+}
+textarea{
+    margin:5px;
+    width:300px;
+    height:150px;
+    border-radius: 10px;
+}
+/* footer */
+.footer{
+    flex-wrap: wrap;
+    /* flex-direction: row; */
+    justify-content:flex-start;
+    height:600px;
+    align-items:flex-start;
+    background-color:rgb(40, 39, 39);
+    border:2px solid red;
+}
+.footer p{
+    font-size: medium;
+}
+ .foot-logo{
+    font-size: 50px;
+    width:60px;
+    height:60px;
+    padding:10px;
+    margin-right:122px;
+    /* border:2px solid yellow; */
+}
+.f1{
+    margin: 10px;;
+    font-size:20px;
+}
+.contact{
+    margin-top: 10px;
+}
+.address{
+    margin-top: 0px;
+}
 }
