--- a/style.css
+++ b/style.css
@@ -62,11 +62,12 @@ h1:hover {
     /* border: 2px solid yellow; */
 }
 .sticky-logo{
-    margin-left: 1155px;
+    display:block;
+    width:80;
+    float:right;
     position:sticky;
     top:300px;
     font-size: 50px;
-    /* color:blueviolet; */
     /* border:2px solid red; */
     color:black;
     opacity:1;
@@ -326,15 +327,16 @@ input{
 }
 
 /************************************* phone *********************************/
-@media only screen and (max-width:400px){
+@media only screen and (max-width:500px){
 /* haeder */
 header {
-    height: 230px;
-    padding-top: 45px;
+    height: 210px;
+    padding-top: 30px;
     border-radius: 50%;
 }
 /* box */
 .main-sub1 {
+    
     width: 319px;
     height: 464px;
     margin-left: 6px;
@@ -343,7 +345,9 @@ p{
     font-size: 18px;
 }
 .sticky-logo{
-    margin-left: 325px;
+    display: block;
+    width: 80px;
+    float:right;
     top:150px;
    }
 /* types */
@@ -360,10 +364,9 @@ dl {
     }
 /* Brands */
 .brands {
-    width: 365px;
+        width: 365px;
     height: 525px;
     /* border: 2px solid green; */
-    /* border-radius:20px; */
     margin-left: 3px;
     margin-top: 0px;
     flex-wrap: wrap;
@@ -437,13 +440,13 @@ textarea{
 }
 /* footer */
 .footer{
-    flex-wrap: wrap;
-    /* flex-direction: row; */
+        flex-wrap: wrap;
+    flex-direction: column;
     justify-content:flex-start;
-    height:600px;
+    height:560px;
     align-items:flex-start;
     background-color:rgb(40, 39, 39);
-    border:2px solid red;
+    /* border:2px solid red; */
 }
 .footer p{
     font-size: medium;
@@ -453,7 +456,7 @@ textarea{
     width:60px;
     height:60px;
     padding:10px;
-    margin-right:122px;
+    /* margin-right:122px; */
     /* border:2px solid yellow; */
 }
 .f1{
@@ -461,9 +464,113 @@ textarea{
     font-size:20px;
 }
 .contact{
-    margin-top: 10px;
+    margin-top: 40px;
 }
 .address{
-    margin-top: 0px;
+    margin-top: 40px;
+}
+}
+
+/**************************************** tablet **************************************/
+@media (min-width:500px) and (max-width:990px){
+/* haeder */
+header {
+    height: 115px;
+    padding-top: 45px;
+    border-radius: 50%;
+}
+/* box */
+.main-sub1 {
+    display: block;
+    width: 600px;
+    margin: auto;
+    height: 250px;
+}
+p{
+    font-size: 18px;
+}
+.sticky-logo{
+    display: block;
+    width:80px;
+    float:right;
+    /* border:2px solid violet; */
+    top:150px;
+   }
+   /* Brands */
+.brands {
+    display:block;
+    width: 700px;
+    margin: auto;
+        height: 222px; 
+    /* border: 2px solid green; */
+    display:flex;
+    margin-top: 10px;
+     }
+
+/* 1st, 3rd, 5th brand */
+ .brand-name1 {
+   
+    padding: 10px 10px;
+    width: 218px;
+    height: 199px;
+    /* border: 2px solid maroon; */
+}
+.brand-desc1 {
+    
+    padding: 0px 20px;
+    width: 414px;
+    height: 220px;
+    /* border:2px solid blue; */
+}
+/* 2nd, 4th brand */
+.brand-name2 {
+    padding: 0px 20px;
+    width: 414px;
+    height: 220px;
+    /* border: 2px solid maroon; */
+}
+.brand-desc2 {
+    padding: 10px 10px;
+    width: 218px;
+    height: 199px;
+    /* border: 2px solid lime; */
+}
+/* gallery */
+.rows{
+    /* display:flex; */
+    /* justify-content: center; */
+    margin:10px;
+    padding:10px;
+}
+.picture{
+    width:400px;
+    height:280px;
+    /* border:2px solid green */
+}
+h4{
+    font-family: 'Play', sans-serif;
+    text-align: center;
+    font-size: 20px;
+}
+/* form */
+
+.form{
+    /* border:2px solid blue; */
+    /* text-align:center; */
+    font-size: 20px;
+    }
+h3{
+        font-size: 22px;
+  }
+input{
+    width:330px;
+    font-size: 20px;
+    padding:20px
+}
+textarea{
+    margin:5px;
+    width:340px;
+    height:150px;
+    border-radius: 10px;
 }
 }
